--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "broccoli-funnel": "^1.2.0",
+    "broccoli-merge-trees": "^2.0.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~2.14.0",
     "ember-cli-app-version": "^3.0.0",
