--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "ember-data": "~2.14.3",
     "ember-export-application-global": "^2.0.0",
     "ember-i18n": "^5.0.2",
+    "ember-i18n-loader": "^0.1.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-m-css-loader": "^0.1.1",
+    "ember-m-js-loader": "^0.1.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.14.0",
     "loader.js": "^4.2.3",
