--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-cli-update": "^0.53.3",
     "ember-data": "~2.14.3",
     "ember-export-application-global": "^2.0.0",
     "ember-i18n": "^5.0.2",
